stylesheets/global.css
:root {
  --section-background: #FFF;
  --text: #333;
  --button-bg: #333;
  --button-text: #FFF;
  --button-bg-hover: transparent;
  --button-text-hover: var(--button-bg);
  --focus-outline: #FF932B;
}

@media (prefers-color-scheme: dark) {
  :root {
    --section-background: #333;
    --text: #EEE;
    --button-bg: #EEE;
    --button-text: #333;
    --button-bg-hover: transparent;
    --button-text-hover: var(--button-bg);
    --focus-outline: #FF932B;
  }
}

@font-face {
  font-family: "CoreSans Extra Bold";
  src: url("../assets/Core\ Sans\ CR\ 75\ ExtraBold.ttf") format("opentype")
}

body {
  width: 100%;
  min-height: 100%;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  background: transparent;
}

#backgrounds {
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1000;
  width: 100vw;
  height: 100vh;
}

#backgrounds > img {
  position: fixed;
  width: 100vw;
  height: 100vh;
  object-fit: cover;
  opacity: 0;
  transition-property: opacity;
  transition-duration: 2.5s;
  transition-timing-function: ease-in-out;
}

main {
  width: fit-content;
  display: flex;
  align-items: center;
  flex-direction: column;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  margin: 2rem;
  gap: 2rem;
}

main > * {
  background-color: var(--section-background);
  color: var(--text);
  border-radius: 1rem;
  width: 100%;
  padding: 2rem;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  contain: content;
}

header {
  align-items: center;
}

header > img {
  width: 33%;
}

h1, h2, h3 {
  font-family: "CoreSans Extra Bold";
  text-align: center;
  margin: 0;
}

h1 {
  font-weight: 600;
  font-size: 44px;
}

h2 {
  font-weight: 500;
  font-size: 32px;
}

h3 {
  font-weight: 200;
  font-size: 22px;
}

.button-list {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 1rem;
}

.button-list > a {
  width: 25%;
  flex-grow: 1;
  background-color: var(--button-bg);
  color: var(--button-text);
  font-size: 18px;
  padding: 1rem;
  border-radius: 3em;
  text-align: center;
  text-decoration: none;
  border: 3px solid transparent;
  transition: all 100ms cubic-bezier(0,.65,.5,1);
  letter-spacing: 0.5px;
}

.button-list > a:hover {
  background-color: var(--button-bg-hover);
  color: var(--button-text-hover);
  border: 3px solid var(--button-text-hover);
  text-decoration: underline;
}

a {
  font-weight: bold;
  outline: 10px solid transparent;
  outline-offset: 10px;
}

a:focus, a:focus-visible {
  outline: 3px solid var(--focus-outline);
  outline-offset: 3px;
}

@media (max-width: 800px) or (max-height: 900px) {
  body {
    align-items: flex-start;
  }
}

